feat: update profile endpoint
